--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <div class="pizza-size">
                         <h3>TAMANHO</h3>
                         <div>
-                            <div class="cor" id="small" onclick="pizzaSize(), small = true">PEQUENA <span>100g</span></div>
-                            <div class="cor" id="medium" onclick="pizzaSize(), medium = true">MEDIA <span>530g</span></div>
-                            <div class="cor botao-color" id="large" onclick="pizzaSize(), large = true">GRANDE <span>860g</span></div>
+                            <div class="cor" id="small" onclick="pizzaSize('small')">PEQUENA <span>100g</span></div>
+                            <div class="cor" id="medium" onclick="pizzaSize('medium')">MEDIA <span>530g</span></div>
+                            <div class="cor botao-color" id="large" onclick="pizzaSize('large')">GRANDE <span>860g</span></div>
                         </div>
                     </div>
                 </div>
@@ -73,113 +73,9 @@
     </header>
         <nav>
             <div class="container-pizza">
-                <div class="box-pizza">
-                    <div class="photo">
-                        <img id="img-choose" src="assets/imagens/pizza.png" alt="">
-                        <button class="add" onclick="chooseOne(pizzaJson[0]), i = 0">+</button>
-                    </div>
-                    <div class="text">
-                        <h3 id="texto">R$ <span id="valor-pizza1">20.19</span></h3>
-                        <h2 class="sabor">Mussarela</h2>
-                        <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias culpa incidunt ab earum distinctio</h5>
-                    </div>
-                </div>
 
-                <div class="box-pizza">
-                    <div class="photo">
-                        <img src="assets/imagens/pizza2.png" alt="">
-                        <button class="add" onclick="chooseOne(pizzaJson[1]), i = 1">+</button>
-                    </div>
-                    <div class="text">
-                        <h3>R$ <span id="valor-pizza2">24.29</span></h3>
-                        <h2>Bahiana</h2>
-                        <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias culpa incidunt ab earum distinctio</h5>
-                    </div>
-                </div>
-
-                <div class="box-pizza">
-                    <div class="photo">
-                        <img src="assets/imagens/pizza3.png" alt="">
-                        <button class="add" onclick="chooseOne(pizzaJson[2]), i = 2">+</button>
-                    </div>
-                    <div class="text">
-                        <h3>R$ <span id="valor-pizza3">32.12</span></h3>
-                        <h2>Napolitana</h2>
-                        <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias culpa incidunt ab earum distinctio</h5>
-                    </div>
-                </div>
-
-                <div class="box-pizza">
-                    <div class="photo">
-                        <img src="assets/imagens/pizza4.png" alt="">
-                        <button class="add" onclick="chooseOne(pizzaJson[3]), i = 3">+</button>
-                    </div>
-                    <div class="text">
-                        <h3>R$ <span id="valor-pizza4">34.12</span></h3>
-                        <h2>4 Queijos</h2>
-                        <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias culpa incidunt ab earum distinctio</h5>
-                    </div>
-                </div>
-
-                <div class="box-pizza">
-                    <div class="photo">
-                        <img src="assets/imagens/pizza5.png" alt="">
-                        <button class="add" onclick="chooseOne(pizzaJson[4]), i = 4">+</button>
-                    </div>
-                    <div class="text">
-                        <h3>R$ <span id="valor-pizza5">26.10</span></h3>
-                        <h2>Moda da Casa</h2>
-                        <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias culpa incidunt ab earum distinctio</h5>
-                    </div>
-                </div>
-
-                <div class="box-pizza">
-                    <div class="photo">
-                        <img src="assets/imagens/pizza6.png" alt="">
-                        <button class="add" onclick="chooseOne(pizzaJson[5]), i = 5">+</button>
-                    </div>
-                    <div class="text">
-                        <h3>R$ <span id="valor-pizza6">27.19</span></h3>
-                        <h2>Bacalhau</h2>
-                        <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias culpa incidunt ab earum distinctio</h5>
-                    </div>
-                </div>
-
-                <div class="box-pizza">
-                    <div class="photo">
-                        <img src="assets/imagens/pizza7.png" alt="">
-                        <button class="add" onclick="chooseOne(pizzaJson[6]), i = 6">+</button>
-                    </div>
-                    <div class="text">
-                        <h3>R$ <span id="valor-pizza7">18.19</span></h3>
-                        <h2>Chocolate</h2>
-                        <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias culpa incidunt ab earum distinctio</h5>
-                    </div>
-                </div>
-
-                <div class="box-pizza">
-                    <div class="photo">
-                        <img src="assets/imagens/pizza.png" alt="">
-                        <button class="add" onclick="chooseOne(pizzaJson[7]), i = 7">+</button>
-                    </div>
-                    <div class="text">
-                        <h3>R$ <span id="valor-pizza8">29.24</span></h3>
-                        <h2>Calabresa</h2>
-                        <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias culpa incidunt ab earum distinctio</h5>
-                    </div>
-                </div>
-
-                <div class="box-pizza">
-                    <div class="photo">
-                        <img src="assets/imagens/pizza2.png" alt="">
-                        <button class="add" onclick="chooseOne(pizzaJson[8]), i = 8">+</button>
-                    </div>
-                    <div class="text">
-                        <h3>R$ <span id="valor-pizza9">24.19</span></h3>
-                        <h2>Camarão</h2>
-                        <h5>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias culpa incidunt ab earum distinctio</h5>
-                    </div>
-                </div>
+                <!--Pizzas inseridas dinamicamente pelo JS-->
+               
             </div>
         </nav>
     </main>
@@ -210,6 +106,7 @@
 
     </aside>
     
+    <script src="assets/script/Json.js"></script>
     <script src="assets/script/script.js"></script>
 </body>
 </html>
